--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -5,6 +5,10 @@
     'form/teachers_field.html.twig'
     ] %}
 
+    <h3>
+        Présentation générale
+    </h3>
+
     {{ form_start(form) }}
     {{ form_errors(form) }}
     <div class="row mt-3">
