--- a/app/Resources/views/course/edit_infos_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_infos_course_info_tab.html.twig
@@ -1,23 +1,28 @@
 {% extends 'ajax.html.twig' %}
 
 {% block main %}
+
+    <h3>
+        Informations pratiques
+    </h3>
+
     {{ form_start(form) }}
 
     <div class="row mt-3">
         <div class="col">
             <h6 class="mt-3">
-                Indiquer toutes les informations dont vous disposez sur le calendrier du cours, des examens...
+                Indiquer toutes les informations dont vous disposez sur le calendrier du cours, des examens… (facultatif)
             </h6>
-            <h6>
-                Vous pouvez aussi partager un emploi du temps (ex: lien web, ...) (facultatif)
-            </h6>
+            <p>
+                Vous pouvez aussi partager un emploi du temps (lien web…).
+            </p>
             {{form_widget(form.agenda)}}
         </div>
     </div>
     <div class="row mt-3">
         <div class="col">
             <h6 class="mt-3">
-                Comment allez-vous organiser votre cours ? (facultatif)
+                Comment allez-vous organiser votre cours ? (facultatif)
             </h6>
             {{form_widget(form.organization)}}
         </div>
