Fix drop area height.

--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -171,7 +171,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col m-2 h-100 border">
+                                <div class="col m-2 border">
                                     <p class="text-muted font-italic text-center p-2">
                                         Glisser / déposer ici vos activités et évaluations (contrôle continu)…
                                     </p>
