--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -15,6 +15,7 @@
 
     <h6 class="my-3">
         Intégrer une ressource vidéo (ou audio) respectant la règlementation sur les droits d'auteur (facultatif)
+        <img id="infos_closingVideo" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
     </h6>
     {{ form_widget(form.closingVideo) }}
 
@@ -35,6 +36,15 @@
          */
         $("form[name='edit_closing_remarks_course_info']").submit(function(e){
             Syllabus.submitPanelForm( e, this );
+        });
+
+        $(document).on('click', '#infos_closingVideo', function(){
+            var message = '<p>Afin de pouvoir intégrer une vidéo dans votre cours, veuillez vous assurer que celle-ci soit hébergée sur un serveur externe à Moodle (ex: UNSPOD, Youtube, ...). Si ce n’est pas le cas, vous pouvez demander de l’aide pour la déposer sur une de ces plateformes.</p><p>Une fois qu’elle y est stockée, vous pouvez cliquer sur “Partager / Intégrer” afin de récupérer le lien d\'intégration ressemblant à : <pre>&lt;iframe ... &gt;&lt;/iframe&gt;</pre> Copiez ce code et insérez-le dans le champ “Vidéo” ci-dessous. La vidéo sera visible par vos étudiants directement sur votre syllabus</p>';
+            bootbox.dialog({
+                message: message,
+                backdrop: true,
+                onEscape: true
+            });
         });
 
     </script>
