--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -24,6 +24,7 @@
         <div class="col">
             <h6>
                 Quel est le niveau de ce cours ? *
+                <img id="infos_level" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
             </h6>
             {{ form_errors(form.level) }}
             <ul>
@@ -83,6 +84,7 @@
                     {% endif %}
                 </div>
                 <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
+                    <img id="infos_video" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
                     {{ form_widget(form.video) }}
                     <label placeholder="URL"></label>
                 </div>
@@ -364,6 +366,28 @@
          */
         $("form[name='edit_presentation_course_info']").submit(function(e){
             Syllabus.submitPanelForm( e, this );
+        });
+
+        $(document).on('click', '#infos_level', function(){
+            var message = '<ul>' +
+                '<li><strong>Débutant</strong> : Ce cours demande peu ou pas de connaissance préaables.</li>' +
+                '<li><strong>Intermédiaire</strong> : Ce cours demande quelques connaissance préaables.</li>' +
+                '<li><strong>Avancé</strong> : Ce cours demande d\'importantes connaissance préaables.</li>' +
+            '</ul>';
+            bootbox.dialog({
+                message: message,
+                backdrop: true,
+                onEscape: true
+            });
+        });
+
+        $(document).on('click', '#infos_video', function(){
+            var message = '<p>Afin de pouvoir intégrer une vidéo dans votre cours, veuillez vous assurer que celle-ci soit hébergée sur un serveur externe à Moodle (ex: UNSPOD, Youtube, ...). Si ce n’est pas le cas, vous pouvez demander de l’aide pour la déposer sur une de ces plateformes.</p><p>Une fois qu’elle y est stockée, vous pouvez cliquer sur “Partager / Intégrer” afin de récupérer le lien d\'intégration ressemblant à : <pre>&lt;iframe ... &gt;&lt;/iframe&gt;</pre> Copiez ce code et insérez-le dans le champ “Vidéo” ci-dessous. La vidéo sera visible par vos étudiants directement sur votre syllabus</p>';
+            bootbox.dialog({
+                message: message,
+                backdrop: true,
+                onEscape: true
+            });
         });
 
     </script>
